--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -87,5 +87,5 @@ jobs:
                   NXRM_SERVER_USERNAME: ${{ secrets.NXRM_SERVER_USERNAME }}
                   NXRM_SERVER_PASSWORD: ${{ secrets.NXRM_SERVER_PASSWORD }}
                   TF_ACC: '1'
-              run: go test -v -cover ./internal/provider/
+              run: go test -v -cover ./...
               timeout-minutes: 10
