--- a/.golangci.yml
+++ b/.golangci.yml
@@ -21,8 +21,8 @@ version: "2"
 issues:
   max-same-issues: 0
 
-linters:
-  default: all
+# linters:
+  # default: all
   # enable:
   #   - durationcheck
   #   - errcheck
