--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -40,10 +40,16 @@ jobs:
         runs-on: ubuntu-latest
         steps:
             - uses: actions/checkout@v4
+              
             - uses: actions/setup-go@v5
               with:
                   go-version-file: 'go.mod'
                   cache: true
+
+            - uses: hashicorp/setup-terraform@v3
+              with:
+                terraform_version: 1.4.5
+                terraform_wrapper: false
             
             - name: Generate Docs
               run: go generate ./...
