chore(ci): Add Sonatype scans to build and release CI workflows
Signed-off-by: Paul Horton <phorton@sonatype.com>

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -13,6 +13,9 @@ on:
         paths-ignore:
             - 'README.md'
 
+env:
+    LC_APPLICATION_ID: terraform-provider-sonatyperepo
+
 # Testing only needs permissions to read the repository contents.
 permissions:
     contents: read
