chore(ci): Add Sonatype scans to build and release CI workflows
Signed-off-by: Paul Horton <phorton@sonatype.com>

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -126,7 +126,10 @@ jobs:
 
     test-single-hit:
         name: Terraform Provider Acceptance Tests (Single Hit)
-        needs: build
+        needs: 
+            - build
+            - sonatype
+            - generate
         runs-on: ubuntu-latest
         timeout-minutes: 15
         steps:
