chore(ci): Add Sonatype scans to build and release CI workflows
Signed-off-by: Paul Horton <phorton@sonatype.com>

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -21,6 +21,8 @@ jobs:
         name: Sonatype Scan
         runs-on: ubuntu-latest
         steps:
+            - uses: actions/checkout@v4
+              
             - name: Sonatype Lifecycle Evaluation
               id: evaluate
               uses: sonatype/actions/evaluate@v1
