--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -45,6 +45,15 @@ jobs:
         steps:
             - uses: actions/checkout@v4
               
+            - uses: actions/setup-go@v5
+              with:
+                go-version-file: 'go.mod'
+                cache: true
+              
+            - name: Generate go.list
+              run:
+                    go list -f '{{define "M"}}{{.Path}} {{.Version}}{{end}}{{with .Module}}{{if not .Main}}{{if .Replace}}{{template "M" .Replace}}{{else}}{{template "M" .}}{{end}}{{end}}{{end}}' -compiled -deps| sort -u > go.list
+              
             - name: Sonatype Lifecycle Evaluation
               id: evaluate
               uses: sonatype/actions/evaluate@v1
@@ -53,7 +62,7 @@ jobs:
                     username: ${{ secrets.SONATYPE_LIFECYCLE_USERNAME }}
                     password: ${{ secrets.SONATYPE_LIFECYCLE_PASSWORD }}
                     application-id: ${{ env.LC_APPLICATION_ID }}
-                    scan-targets: '.'
+                    scan-targets: 'go.list'
                     stage: build
 
     generate:
