--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -48,22 +48,21 @@ jobs:
         needs: sonatype
         runs-on: ubuntu-latest
         steps:
-            - uses: actions/checkout@c85c95e3d7251135ab7dc9ce3241c5835cc595a9 # v3.5.3
+            - uses: actions/checkout@v4
               with:
                   # Allow goreleaser to access older tag information.
                   fetch-depth: 0
-            - uses: actions/setup-go@fac708d6674e30b6ba41289acaab6d4b75aa0753 # v4.0.1
+            - uses: actions/setup-go@v5
               with:
                   go-version-file: 'go.mod'
-                  cache: true
             - name: Import GPG key
-              uses: crazy-max/ghaction-import-gpg@72b6676b71ab476b77e676928516f6982eef7a41 # v5.3.0
+              uses: crazy-max/ghaction-import-gpg@v6
               id: import_gpg
               with:
                   gpg_private_key: ${{ secrets.GPG_PRIVATE_KEY }}
                   passphrase: ${{ secrets.PASSPHRASE }}
             - name: Run GoReleaser
-              uses: goreleaser/goreleaser-action@336e29918d653399e599bfca99fadc1d7ffbc9f7 # v4.3.0
+              uses: goreleaser/goreleaser-action@v6
               with:
                   args: release --clean
               env:
