chore(ci): Prevent changelog changes running ACC Tests
Signed-off-by: Paul Horton <phorton@sonatype.com>

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,11 +6,13 @@ name: Tests
 on:
     pull_request:
         paths-ignore:
+            - 'CHANGELOG.md'
             - 'README.md'
     push:
         branches:
             - main
         paths-ignore:
+            - 'CHANGELOG.md'
             - 'README.md'
 
 env:
