--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,6 +17,8 @@ on:
 
 env:
     LC_APPLICATION_ID: terraform-provider-sonatyperepo
+    NEXUS_SECURITY_RANDOMPASSWORD: "false"
+    INSTALL4J_ADD_VM_PARAMS: "-Dnexus.licenseFile=${{ github.workspace }}/license.lic"
     NXRM_VERSION: "3.81.1-01"
 
 # Testing only needs permissions to read the repository contents.
@@ -123,6 +125,7 @@ jobs:
         steps:
             - name: Download, Unpack & Start Sonatype Nexus Repository Manager
               run: |
+                  echo "${{ secrets.NXRM_LICENSE }}" | base64 -d > ${{ github.workspace}}/license.lic
                   wget https://download.sonatype.com/nexus/3/nexus-${{ env.NXRM_VERSION }}-linux-x86_64.tar.gz 
                   tar xvz --keep-directory-symlink -f nexus-${{ env.NXRM_VERSION }}-linux-x86_64.tar.gz 
                   cd nexus-${{ env.NXRM_VERSION }}/bin && ./nexus start
@@ -141,6 +144,7 @@ jobs:
                         sleep 5
                     fi
                   done
+                  curl -u admin:admin123 http://localhost:8081/service/rest/v1/status/checks
 
             - name: Checkout Source
               uses: actions/checkout@v4
