--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -107,10 +107,10 @@ jobs:
             fail-fast: false
             matrix:
                 nxrm:
-                    - '3.77.2-02' # N-5
-                    - '3.78.1-02'
-                    - '3.79.1-04'
-                    - '3.80.0-06'
+                    # - '3.77.2-02' # N-5
+                    # - '3.78.1-02'
+                    # - '3.79.1-04'
+                    - '3.80.0-06' # FIRST WITH BUNDLED JRE
                     - '3.81.1-01' # LATEST
                 # list whatever Terraform versions here you would like to support
                 terraform:
