--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -111,7 +111,7 @@ jobs:
                     # - '3.78.1-02'
                     # - '3.79.1-04'
                     - '3.80.0-06' # FIRST WITH BUNDLED JRE
-                    - '3.81.1-01' # LATEST
+                    # - '3.81.1-01' # LATEST
                 # list whatever Terraform versions here you would like to support
                 terraform:
                     - '1.0.*' # Minimum
