chore(ci): Test only against 3.80.0
Signed-off-by: Paul Horton <phorton@sonatype.com>

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -130,12 +130,16 @@ jobs:
                     # - '1.13.*'
                     # - '1.14.*'
         steps:
-            - name: Download, Unpack & Start Sonatype Nexus Repository Manager
+            - name: Download & Unpack & 
               run: |
-                  echo "${{ secrets.NXRM_LICENSE }}" | base64 -d > ${{ github.workspace}}/license.lic
+                  echo "${{ secrets.NXRM_LICENSE }}" | base64 -d > ${{ github.workspace }}/license.lic
                   wget https://download.sonatype.com/nexus/3/nexus-${{ matrix.nxrm }}-linux-x86_64.tar.gz 
                   tar xvz --keep-directory-symlink -f nexus-${{ matrix.nxrm }}-linux-x86_64.tar.gz 
-                  cd nexus-${{ matrix.nxrm }}/bin && ./nexus start
+                  ./nexus-${{ matrix.nxrm }}/bin/nexus start
+
+            - name: Start Sonatype Nexus Repository Manager
+              run: ./nexus start
+              working-directory: "${{ github.workspace }}/nexus-${{ matrix.nxrm }}/bin"
 
             - name: Wait for Sonatype Nexus Repository Manager to be ready
               run: |
