--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -130,12 +130,13 @@ jobs:
                     # - '1.13.*'
                     # - '1.14.*'
         steps:
-            - name: Download & Unpack & 
+            - name: Download & Unpack Sonatype Nexus Repository Manager
               run: |
                   echo "${{ secrets.NXRM_LICENSE }}" | base64 -d > ${{ github.workspace }}/license.lic
                   wget https://download.sonatype.com/nexus/3/nexus-${{ matrix.nxrm }}-linux-x86_64.tar.gz 
                   tar xvz --keep-directory-symlink -f nexus-${{ matrix.nxrm }}-linux-x86_64.tar.gz 
                   sed -i '1s/^.*$/#!\/bin\/bash/' ${{ github.workspace }}/nexus-${{ matrix.nxrm }}/bin/nexus
+                  head -5 ${{ github.workspace }}/nexus-${{ matrix.nxrm }}/bin/nexus
 
             - name: Start Sonatype Nexus Repository Manager
               run: ./nexus start
@@ -155,7 +156,7 @@ jobs:
                         sleep 5
                     fi
                   done
-                  curl -u admin:admin123 http://localhost:8081/service/rest/v1/status/checks
+                  curl -u admin:admin123 http://localhost:8081/service/rest/v1/status/check
 
             - name: Checkout Source
               uses: actions/checkout@v4
