chore(ci): Test only against 3.80.0
Signed-off-by: Paul Horton <phorton@sonatype.com>

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -146,7 +146,7 @@ jobs:
               run: |
                   sleep 20
                   while true; do
-                    STATUS=$(curl -s -o /dev/null -w "%{http_code}" "http://localhost:8081/service/rest/v1/status")
+                    STATUS=$(curl -v -o /dev/null -w "%{http_code}" "http://localhost:8081/service/rest/v1/status")
 
                     if [ "$STATUS" -eq 200 ]; then
                         echo "Received 200 OK from http://localhost:8081/service/rest/v1/status"
