--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -146,14 +146,22 @@ jobs:
               run: |
                   sleep 20
                   while true; do
-                    STATUS=$(curl -v -o /dev/null -w "%{http_code}" "http://localhost:8081/service/rest/v1/status")
+                    STATUS=$(curl -s -o /dev/null -w "%{http_code}" "http://localhost:8081/service/rest/v1/status")
+                    CURL_EXIT=$?
 
-                    if [ "$STATUS" -eq 200 ]; then
-                        echo "Received 200 OK from http://localhost:8081/service/rest/v1/status"
-                        break
+                    echo "CURL Exit Code: $CURL_EXIT"
+
+                    if [ "$CURL_EXIT" -eq 0 ]; then
+                      if [ "$STATUS" -eq 200 ]; then
+                          echo "✅ Received 200 OK from http://localhost:8081/service/rest/v1/status"
+                          break
+                      else
+                          echo "⏳ Waiting for 200 OK... Current status: $STATUS for http://localhost:8081/service/rest/v1/status"
+                          sleep 5
+                      fi
                     else
-                        echo "Waiting for 200 OK... Current status: $STATUS for http://localhost:8081/service/rest/v1/status"
-                        sleep 5
+                      echo "⚠️ curl returned unexpected exit code $CURL_EXIT. Retrying..."
+                      sleep 5
                     fi
                   done
 
