--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -144,6 +144,7 @@ jobs:
 
             - name: Wait for Sonatype Nexus Repository Manager to be ready
               run: |
+                  set +e
                   sleep 20
                   while true; do
                     STATUS=$(curl -s -o /dev/null -w "%{http_code}" "http://localhost:8081/service/rest/v1/status")
