chore(ci): debug why we cant keep nexus.log
Signed-off-by: Paul Horton <phorton@sonatype.com>

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -173,7 +173,13 @@ jobs:
               with:
                   go-version-file: 'go.mod'
                   cache: true
-            - uses: hashicorp/setup-terraform@v3
+
+            - run: |
+                ls -al ${{ github.workspace }}
+                exit 1
+
+            - name: Setup Terraform
+              uses: hashicorp/setup-terraform@v3 
               with:
                   terraform_version: ${{ matrix.terraform }}
                   terraform_wrapper: false
