--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -130,6 +130,11 @@ jobs:
                     # - '1.13.*'
                     # - '1.14.*'
         steps:
+            - name: Set Clean TF Version
+              run: |
+                TF_SAFE_VERSION="${${{ matrix.terraform }}//\*/}"
+                echo "TF_SAFE_VERSION=$TF_SAFE_VERSION" >> "$GITHUB_ENV"
+                
             - name: Checkout Source
               uses: actions/checkout@v4
 
@@ -194,5 +199,5 @@ jobs:
               if: always()
               uses: actions/upload-artifact@v4
               with:
-                name: "nexus.log-nxrm-${{ matrix.nxrm }}-terraform-${{ matrix.terraform }}"
+                name: "nexus.log-nxrm-${{ matrix.nxrm }}-terraform-${{ env.TF_SAFE_VERSION }}"
                 path: "${{ github.workspace }}/sonatype-work/nexus3/log/nexus.log"
