chore(ci): Handle * in TF Version for artifact upload
Signed-off-by: Paul Horton <phorton@sonatype.com>

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -132,7 +132,8 @@ jobs:
         steps:
             - name: Set Clean TF Version
               run: |
-                TF_SAFE_VERSION="${${{ matrix.terraform }}//\*/}"
+                ORIG="${{ matrix.terraform }}"
+                TF_SAFE_VERSION="${ORIG//\*/}"
                 echo "TF_SAFE_VERSION=$TF_SAFE_VERSION" >> "$GITHUB_ENV"
                 
             - name: Checkout Source
