--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -194,10 +194,9 @@ jobs:
                   TF_ACC_SINGLE_HIT: '1'
               run: go test -v -cover ./...
               timeout-minutes: 10
-              continue-on-error: true
 
             - name: Store nexus.log
-              if: always()
+              if: success() || failure()
               uses: actions/upload-artifact@v4
               with:
                 name: "nexus.log-nxrm-${{ matrix.nxrm }}-terraform-${{ env.TF_SAFE_VERSION }}"
