--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -4,7 +4,7 @@ name: Tests
 # This GitHub action runs your tests for each pull request and push.
 # Optionally, you can turn it on using a schedule for regular testing.
 on:
-    pull_request_target:
+    pull_request:
         paths-ignore:
             - 'CHANGELOG.md'
             - 'README.md'
