--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -45,7 +45,7 @@ jobs:
             
     sonatype:
         # Skip this job if PR is from a fork
-        if: github.event.pull_request.head.repo.full_name == github.repository
+        if: github.event.pull_request.head.repo.fork == false
         name: Sonatype Scan
         runs-on: ubuntu-latest
         steps:
@@ -99,7 +99,7 @@ jobs:
     # Run acceptance tests in a matrix with Terraform CLI versions
     test-parallel:
         # Skip this job if PR is from a fork
-        if: github.event.pull_request.head.repo.full_name == github.repository
+        if: github.event.pull_request.head.repo.fork == false
         name: Acc. Tests (NXRM ${{ matrix.nxrm }} + TF ${{ matrix.terraform }})
         needs: 
             - build
