chore(ci): Attempts to slightly improve GH workflows...
Signed-off-by: Paul Horton <phorton@sonatype.com>

--- a/.github/workflows/test-trusted.yml
+++ b/.github/workflows/test-trusted.yml
@@ -25,7 +25,7 @@ permissions:
 
 jobs:
     sonatype:
-        if: ${{ github.event.workflow_run.conclusion == 'success' && github.ref_name != 'main' }}
+        if: ${{ github.event_name == 'push' || (github.event.workflow_run.conclusion == 'success' && github.ref_name != 'main') }}
         name: Sonatype Scan
         runs-on: ubuntu-latest
         steps:
@@ -53,7 +53,7 @@ jobs:
 
     # Run acceptance tests in a matrix with Terraform CLI versions
     test-parallel:
-        if: ${{ github.event.workflow_run.conclusion == 'success' && github.ref_name != 'main' }}
+        if: ${{ github.event_name == 'push' || (github.event.workflow_run.conclusion == 'success' && github.ref_name != 'main') }}
         name: Acc. Tests (NXRM ${{ matrix.nxrm }} + TF ${{ matrix.terraform }})
         needs: 
             - sonatype
