--- a/.github/ISSUE_TEMPLATE/bug.yml
+++ b/.github/ISSUE_TEMPLATE/bug.yml
@@ -34,7 +34,7 @@ body:
     validations:
       required: true
 
-  - type: checkbox
+  - type: checkboxes
     id: nxrm-ha
     attributes:
       label: High Availability enabled?
