--- a/.github/ISSUE_TEMPLATE/bug.yml
+++ b/.github/ISSUE_TEMPLATE/bug.yml
@@ -40,8 +40,8 @@ body:
       label: High Availability enabled?
       description: Is Sonatype Nexus Repository Manager High Availability (HA) enabled?
       options:
-        - Yes
-        - No
+        - Yes - HA is enabled
+        - No - Single node only
     validations:
       required: true
 
