feat: Drop support for Terraform prior to 1.5
Signed-off-by: Paul Horton <phorton@sonatype.com>

--- a/.github/workflows/test-untrusted.yml
+++ b/.github/workflows/test-untrusted.yml
@@ -51,9 +51,9 @@ jobs:
                   cache: true
 
             - uses: hashicorp/setup-terraform@b9cd54a3c349d3f38e8881555d616ced269862dd # v3.1.2
-              with:
-                terraform_version: 1.4.5
-                terraform_wrapper: false
+            #   with:
+            #     terraform_version: 1.14
+            #     terraform_wrapper: false
             
             - name: Generate Docs
               run: go generate ./...
