--- a/.github/workflows/test-trusted.yml
+++ b/.github/workflows/test-trusted.yml
@@ -82,14 +82,14 @@ jobs:
                     - '3.86.2-01' # LATEST
                 # list whatever Terraform versions here you would like to support
                 terraform:
-                    - '1.0.*' # Minimum
+                    # - '1.0.*' # Minimum
                     # - '1.1.*'
                     # - '1.2.*'
                     # - '1.3.*'
                     # - '1.4.*'
-                    # - '1.5.*'
+                    # - '1.5.*' # Minimum
                     # - '1.6.*'
-                    # - '1.7.*'
+                    - '1.7.*' # Minimum
                     # - '1.8.*'
                     # - '1.9.*'
                     # - '1.10.*'
